--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,32 +1,2 @@
-<div class="text-layout">
-  <h1> {{name | titlecase }} </h1>
-  <h1> {{number | number }} </h1>
-  <h1> {{obj | json }} </h1>
-
-</div>
-
-<button pButton type="button" label="Cambiar nombre" class="p-button-sm p-button-help" icon="pi pi-apple"
-  iconPos="right" (click)="showName()">
-</button>
-<hr>
-
-
-<div class="p-card" style="width: 360px;">
-  <div class="p-card-header">
-    <img src="https://www.primefaces.org/primeng/assets/showcase/images/usercard.png" alt="Card">
-    <p-card [header]="name | titlecase" subheader="Angular PrimeNG Card component">
-      <p>
-        Angular PrimeNG is a framework used with
-        angular to create components with great
-        styling and this framework is very easy
-        to use and is used to make responsive
-        websites.
-      </p>
-      <button pButton type="button" label="Save" class="p-button-sm" icon="pi pi-check">
-      </button>
-      <button pButton type="button" label="Cancel" class="p-button-sm p-button-secondary second-button"
-        icon="pi pi-times">
-      </button>
-    </p-card>
-  </div>
-</div>
+<app-menu></app-menu>
+<router-outlet></router-outlet>
