ripple with primengservice de primeapi

--- a/src/app/sales/pages/not-common/not-common.component.html
+++ b/src/app/sales/pages/not-common/not-common.component.html
@@ -1,3 +1,17 @@
 <div class="text-layout">
-    <p>not-common works!</p>
+  <h1>Pipes no tan comunes</h1>
+  <p>
+    Pipes incluídos en Angular - Usualmente en el CommonModule.
+  </p>
+</div>
+
+<div class="grid">
+  <div class="col-12 md:col-6 sm:col-9">
+    <p-fieldset legend="Fieldset" [toggleable]="true">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore repudiandae non adipisci vitae, praesentium
+    consequuntur voluptatibus eaque reiciendis? Vero nam expedita veniam cupiditate molestias iusto enim excepturi
+    voluptates quas ex.
+    </p-fieldset>
+    
+  </div>
 </div>
