--- a/src/app/sales/pages/not-common/not-common.component.html
+++ b/src/app/sales/pages/not-common/not-common.component.html
@@ -7,10 +7,16 @@
 
 <div class="grid">
   <div class="col-12 md:col-6 sm:col-9">
-    <p-fieldset legend="Fieldset" [toggleable]="true">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore repudiandae non adipisci vitae, praesentium
-    consequuntur voluptatibus eaque reiciendis? Vero nam expedita veniam cupiditate molestias iusto enim excepturi
-    voluptates quas ex.
+    <p-fieldset legend="i18nSelect Pipe" [toggleable]="true">
+      Saludos {{name}}, es un placer
+      {{genre | i18nSelect:invitationMap}}
+      a nuestro evento.
+    </p-fieldset>
+    
+  </div>
+  <div class="col-12 md:col-6 sm:col-9">
+    <p-fieldset legend="i18nPlural Pipe" [toggleable]="true">
+      Actualmente {{clients.length | i18nPlural:clientsMapping}}
     </p-fieldset>
     
   </div>
