--- a/src/app/sales/pages/not-common/not-common.component.html
+++ b/src/app/sales/pages/not-common/not-common.component.html
@@ -6,18 +6,90 @@
 </div>
 
 <div class="grid">
+
   <div class="col-12 md:col-6 sm:col-9">
     <p-fieldset legend="i18nSelect Pipe" [toggleable]="true">
-      Saludos {{name}}, es un placer
-      {{genre | i18nSelect:invitationMap}}
-      a nuestro evento.
+      <p>
+        Saludos {{name}}, es un placer
+        {{genre | i18nSelect:invitationMap}}
+        a nuestro evento.
+      </p>
+      <button pButton pRipple
+              type="button" 
+              (click)="changeName()" 
+              label="Cambiar nombre" 
+              class="p-button-sm p-button-help">
+      </button>
     </p-fieldset>
     
   </div>
+
   <div class="col-12 md:col-6 sm:col-9">
-    <p-fieldset legend="i18nPlural Pipe" [toggleable]="true">
-      Actualmente {{clients.length | i18nPlural:clientsMapping}}
-    </p-fieldset>
     
+    <p-fieldset legend="i18nPlural Pipe" [toggleable]="true">
+      <p>
+        Actualmente {{clients.length | i18nPlural:clientsMapping}}
+      </p>
+      <button pButton pRipple
+              type="button"
+              (click)="deleteClient()" 
+              label="Borrar Cliente" 
+              class="p-button-sm p-button-danger">
+      </button>
+    </p-fieldset>
   </div>
+
+  <div class="col-12 md:col-6 sm:col-9">
+    <p-fieldset legend="Slice Pipe" [toggleable]="true">
+      
+      <b>Original</b>
+      <!-- <span *ngFor="let client of clients"> {{ client }} </span> -->
+      <pre>{{ clients }}</pre>
+
+      <b>slice:0:2</b>
+      <pre>{{ clients | slice:0:2 }}</pre>
+
+      <b>slice:1:2</b>
+      <pre>{{ clients | slice:1:2 }}</pre>
+
+      <b>slice:1:3</b>
+      <pre>{{ clients | slice:1:3 }}</pre>
+      
+      <b>slice:3:4</b>
+      <pre>{{ clients | slice:3:4 }}</pre>
+      
+    </p-fieldset>
+  </div>
+  
+  <div class="col-12 md:col-6 sm:col-9">
+    <p-fieldset legend="Json Pipe" [toggleable]="true">
+      <pre>{{heroes | json}}</pre>
+    </p-fieldset>
+  </div>
+
+  <div class="col-12 md:col-6 sm:col-9">
+    <p-fieldset legend="KeyValue Pipe" [toggleable]="true">
+    
+      <ul>
+        <li *ngFor="let item of person | keyvalue">
+          <b>{{ item.key | titlecase}}: </b> 
+          {{ item.value }}
+        </li>
+      </ul>
+    
+    </p-fieldset>
+  </div>
+
+  <div class="col-12 md:col-6 sm:col-9">
+    <p-fieldset legend="Async Pipe" [toggleable]="true">
+
+      <pre *ngIf="!(myObservable | async)">Resolviendo Observable...</pre>
+      <pre>{{myObservable | async}}</pre>
+
+      <pre *ngIf="!(promiseValue | async)">Resolviendo Promesa...</pre>
+      <pre>{{promiseValue | async}}</pre>
+    
+    </p-fieldset>
+  </div>
+
 </div>
