animacion de icono

--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -1,3 +1,3 @@
 <p-menubar [model]="items">
-    <img class="menu-icon" src="/assets/images/naruto-icon.png">
+    <img class="menu-icon rotate" src="/assets/images/naruto-icon.png">
 </p-menubar>
