valor y argumentos en pipe personalizado de uppercase

--- a/src/app/sales/pages/sort/sort.component.html
+++ b/src/app/sales/pages/sort/sort.component.html
@@ -1,1 +1,10 @@
-<p>sort works!</p>
+<div class="text-layout">
+    <h1>Pipe Personalizados</h1>
+    <p>
+        Pipes creados por {{"text" | mayus:toUpperCase}}
+    </p>
+
+    <p-button label="toggle mayúsculas"
+              (onClick)="change()">
+    </p-button>
+</div>
