--- a/src/app/sales/pages/sort/sort.component.html
+++ b/src/app/sales/pages/sort/sort.component.html
@@ -1,10 +1,86 @@
 <div class="text-layout">
     <h1>Pipe Personalizados</h1>
-    <p>
-        Pipes creados por {{"text" | mayus:toUpperCase}}
-    </p>
+    
+    <div class="card">
+        
+        <div class="text-center">
+            <button pButton pRipple
+                    label="Toggle MAYUS"
+                    (click)="change()"
+                    class="mb-1 p-button-warning"></button>
+        </div>
+        <div class="text-center">
+            <p>Pipes creados por {{"text" | mayus:toUpperCase}}</p>
+        </div>
+        
+    </div>
 
-    <p-button label="toggle mayúsculas"
-              (onClick)="change()">
-    </p-button>
+</div>
+
+<p-toolbar>
+    <div class="p-toolbar-group-left"></div>
+    
+    <div class="p-toolbar-group-right">
+        
+        <button pButton pRipple
+                label="Por nombre"
+                (click)="changeOrderBy('name')"
+                icon="pi pi-sort"
+                class="mr-1"></button>
+
+        <button pButton pRipple
+                label="Ninjutsu"
+                (click)="changeOrderBy('ninjutsu')"
+                icon="pi pi-sort"
+                class="mr-1 p-button-success"></button>
+        
+        <button pButton pRipple
+                label="Por aldea"
+                (click)="changeOrderBy('village')"
+                icon="pi pi-sort"
+                class="mr-1 p-button-help"></button>
+
+    </div>
+</p-toolbar>
+
+<div class="grid">
+    <div class="col">
+        <p-table [value]="ninjas | sort:orderBy" responsiveLayout="scroll">
+            <ng-template pTemplate="header">
+                <tr>
+                    <th>Nombre</th>
+                    <th>Ninjutsu</th>
+                    <th>Aldea</th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-ninja>
+                <tr>
+                    <td>{{ninja.name}}</td>
+                    <td>{{ninja.ninjutsu | ninjutsu | titlecase}}</td>
+                    <td>{{ninja.village}}</td>
+                </tr>
+            </ng-template>
+        </p-table>
+    </div>
+</div>
+
+<div class="grid">
+    <div class="col mt-2">
+        <p-table [value]="ninjas" responsiveLayout="scroll">
+            <ng-template pTemplate="header">
+                <tr>
+                    <th pSortableColumn="name">Nombre <p-sortIcon field="name"></p-sortIcon></th>
+                    <th>Ninjutsu</th>
+                    <th>Aldea</th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-ninja>
+                <tr>
+                    <td>{{ninja.name}}</td>
+                    <td>{{ninja.ninjutsu | ninjutsu | titlecase}}</td>
+                    <td>{{ninja.village}}</td>
+                </tr>
+            </ng-template>
+        </p-table>
+    </div>
 </div>
